# Alpha-Stream

./: .env.example  .gitignore  debug_output.txt  docker-compose.yml  main.py  mlflow.db  pyproject.toml  sync_log.txt
Backend/: Dockerfile  api.py  main.py  state.py  tasks.py
docs/: approach.md  implementation.md
feature_store/: err.txt  feature_store.py  feature_store.yaml  out.txt
feature_store/data/: crypto_data.parquet  registry.db
logger/: logger.py
mlruns/0/7192052f2b1c477d9546e4bcdbe79306/artifacts/scaler/: ETH-USD_child_scaler.pkl
outputs/ETH-USD/: ETH-USD_child_model.pt  ETH-USD_metrics.json
outputs/parent/: BTC-USD_metrics.json  BTC-USD_parent_model.pt  BTC-USD_parent_scaler.pkl
src/: __init__.py  inference_util.py  train_utils.py  utils.py
src/config/: features.yaml  pipeline_config.py
src/data/: data_ingestion.py  data_preparation.py
src/exception/: __init__.py  exceptions.py
src/model/: evaluation.py  model_defination.py  training.py
src/pipeline/: inference_pipeline.py  training_pipeline.py
