[project]
name = "crypto-prism-ops"
version = "0.1.0"
description = "End to End MLOps Pipeline for Crypto Price Forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feast[redis]",
    "pandas",
    "yfinance",
    "torch",
    "python-dotenv",
    "absl-py>=2.3.1",
    "portalocker>=3.2.0",
    "scikit-learn>=1.8.0",
    "dagshub>=0.6.4",
    "mlflow>=3.8.1",
    "redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "logger"]
